@@ -21,16 +21,20 @@
 var CTree = Class.create();
 
 CTree.prototype = {
-
 	name: null,
 	nodes: [],
+	/*
+	 * Encoding values separated by a comma (%2C), makes the cookie very large in size. A dot, however, remains a dot.
+	 * Must be synced with class.cookie.js for consistency.
+	 */
+	cookie_delimiter: '.',
 
 	initialize: function(name, nodes) {
 		this.name = name;
 		this.nodes = nodes;
 
 		if ((tree_init = cookie.read(name)) != null) {
-			var nodes = tree_init.split(',');
+			var nodes = tree_init.split(this.cookie_delimiter);
 
 			for (var i = 0, size = nodes.length; i < size; i++) {
 				this.onStartSetStatus(nodes[i]);
@@ -54,7 +58,7 @@ CTree.prototype = {
 				var node = this.nodes[id];
 
 				if (!empty(node.status) && node.status == 'open') {
-					cookieData += id + ',';
+					cookieData += id + this.cookie_delimiter;
 				}
 			}
 
